--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.org"
+baseurl = "https://erpatton20.netlify.app/"
 title = "Universal"
 theme = "gohugo-theme-ananke"
 languageCode = "en-us"
