--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://erpatton20.netlify.app/"
-title = "Portfolio"
+title = "Song Lyrics"
 theme = "gohugo-theme-ananke"
 languageCode = "en-us"
 # Site language. Available translations in the theme's `/i18n` directory.
