--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ paginate = 10
 
 [[menu.main]]
     identifier = "contact"
-    name = "a journey"
+    name = "hello"
     url  = "/contact/"
     weight = 4
 
